# my_cms

./: .env  Cargo.toml  configuration.yaml  shell.nix  sqlx-data.json
.github/: dependabot.yml
.github/workflows/: rust.yml
admin-ui/: index.html
coverage/: cobertura.xml  lcov.info
migrations/: 20210103155830_create_posts_table.sql  20210103155830_create_subscriptions_table.sql
scripts/: init_db.sh
src/: collection.rs  configuration.rs  graphql.rs  lib.rs  main.rs  startup.rs  storage.rs  telemetry.rs
src/routes/: health_check.rs  mod.rs  posts.rs
tests/: all_posts.rs  common.rs  create_post.rs  get_post.rs  health_check.rs
